# gtestDemo

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  max.cpp  test_max.cpp
